--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -5,21 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/inicio.css">
     <link rel="shortcut icon" type="image/x-icon" href="/img/logo1.jpg">
-    <title>Bienvenido!</title>
+    <title>Bienvenido Petpocket</title>
 </head>
 <body>
     <nav>
         <div id="digital-waiter">
-            <img src="/img/logo1.jpg" alt="DigitalWaiter" height="100px">
+            <img src="/img/logo4.jpg" alt="Petpocket" height="100px">
         </div>
         <ul>
-            <li><a id="active" href="">MENÚ</a></li>
-            <li><a id="active" href="/login">INICIAR SESION</a></li>
-            <li><a href="/registro">REGISTRARSE</a></li>
+            <li><a id="active" href="">Reels</a></li>
+            <li><a id="active" href="/login">Iniciar Sesion</a></li>
+            <li><a href="/registro">Registrarse</a></li>
         </ul>
     </nav>
-    <h1>BIENVENIDO A<br> DIGITAL<br> WAITER</h1>
-    <button type="button"><a href="/login">Empieza a crear →</a></button>
+    <h1>BIENVENIDO A<br>PETPOCKET</h1>
+    <button type="button"><a href="/login">VER PUBLICACIONES →</a></button>
     
 </body>
 </html>
