--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -9,7 +9,7 @@
     {{!-- <div id="titulosNav">
 
     </div> --}}
-    <title>Digital Waiter</title>
+    <title>PETPOCKET</title>
     {{!-- GOOGLE FONTS --}}
     <link href="https://fonts.googleapis.com/css2?family=Corben:wght@400;700&display=swap" rel="stylesheet">
 
