--- a/src/views/login/login.hbs
+++ b/src/views/login/login.hbs
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/login.css">
     <link rel="shortcut icon" type="image/x-icon" href="/img/logo1.jpg">
-    <title>Registro</title>
+    <title>Inicio Sesion</title>
 </head>
 
 <body>
     <div id="seccion-izquierda">
-        <h1>HOLA<br> DE NUEVO!</h1>
-        <h3>"La creacion es la expresion de la vida."<br>-Rollo May</h3>
+        <h1>BIENVENIDO<br> DE NUEVO!</h1>
+        <h3>"¡Síguenos y no te pierdas la diversión!"</h3>
     </div>
     <div id="seccion-derecha">
         <h1>Inicio de Sesion</h1>
