--- a/src/views/principal/principal.hbs
+++ b/src/views/principal/principal.hbs
@@ -26,7 +26,7 @@
         <div id="user-info">
             <img src="/img/usuarioicono.png">
             <h2>Samuel </h2>
-            <p>Restaurante Administrador</p>
+            <p>Publicacion</p>
         </div>
 
         <div id="card-container">
