--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -16,7 +16,7 @@ body::before {
     left: 0;
     width: 60%; /* Ajusta el ancho según tus necesidades */
     height: 100%;
-    background: linear-gradient(to right, rgba(0, 0, 0, 10), transparent), url(../img/iniciosesion.JPG);
+    background: linear-gradient(to right, rgba(0, 0, 0, 10), transparent), url(../img/karsten-winegeart-qy0BHykaq0E-unsplash.jpg);
     background-size: cover;
     z-index: 1; /* Coloca la imagen de la izquierda debajo de la capa oscura */
 }
@@ -28,7 +28,7 @@ body::after {
     right: 0;
     width: 40%; /* Ancho del desvanecimiento de la imagen de la derecha */
     height: 100%;
-    background: url(../img/fondo.png);
+    background: url(../img/karsten-winegeart-qy0BHykaq0E-unsplash.jpg);
     background-size: cover;
     z-index: 1; /* Coloca la imagen de la derecha debajo de la capa oscura de la izquierda */
     opacity: 4%;
@@ -57,6 +57,7 @@ body::after {
 #seccion-derecha {
     text-align: left;
     z-index: 3; /* Coloca la derecha encima de la capa oscura */
+    background-color: #F6F6F6;
 }
 
 #seccion-derecha h1 {
@@ -94,13 +95,15 @@ input[type="password"] {
 }
 #seccion-derecha p a{
     font-family: 'Montserrat', sans-serif;
-    align-items: right;
+    align-items: center;
     text-decoration: none;
     font-weight: bold;
     padding-right: 60px;
+    right: 58%;
+    position: relative;
 }
 #seccion-derecha button {
-    background-color: #F3DBC3;
+    background-color: #FCA04B;
     border: none;
     font-size: 16px; /* Ajusta el tamaño de la fuente del botón según tus necesidades */
     padding: 15px 60px; /* Ajusta el relleno del botón según tus necesidades */
