--- a/src/public/css/registro.css
+++ b/src/public/css/registro.css
@@ -16,7 +16,7 @@ body::before {
     left: 0;
     width: 60%; /* Ajusta el ancho según tus necesidades */
     height: 100%;
-    background: linear-gradient(to right, rgba(0, 0, 0, 10), transparent), url(../img/registrofondo.png);
+    background: linear-gradient(to right, rgba(0, 0, 0, 10), transparent), url(../img/undine-tackmann-8mxSINYFoSw-unsplash.jpg);
     background-size: cover;
     z-index: 1; /* Coloca la imagen de la izquierda debajo de la capa oscura */
 }
@@ -28,7 +28,7 @@ body::after {
     right: 0;
     width: 40%; /* Ancho del desvanecimiento de la imagen de la derecha */
     height: 100%;
-    background: url(../img/fondo.png);
+    background: url(../img/undine-tackmann-8mxSINYFoSw-unsplash.jpg);
     background-size: cover;
     z-index: 1; /* Coloca la imagen de la derecha debajo de la capa oscura de la izquierda */
     opacity: 4%;
@@ -100,7 +100,7 @@ input[type="password"] {
     padding-right: 60px;
 }
 #seccion-derecha button {
-    background-color: #F3DBC3;
+    background-color: #FCA04B;
     border: none;
     font-size: 16px; /* Ajusta el tamaño de la fuente del botón según tus necesidades */
     padding: 15px 60px; /* Ajusta el relleno del botón según tus necesidades */
