--- a/src/views/login/registro.hbs
+++ b/src/views/login/registro.hbs
@@ -9,15 +9,15 @@
 </head>
 <body>
     <div id="seccion-izquierda">
-        <h1>DIGITAL WAITER</h1>
-        <h3>"El arte de crear es el artes de descubrir."<br>-Pablo Picasso</h3>
+        <h1>PETPOCKET</h1>
+        <h3>"¡Únete a la fiesta! Síguenos para emociones sin fin."</h3>
     </div>
     <div id="seccion-derecha">
-        <h1>Formulario de registro</h1>
+        <h1>Registro Usuario</h1>
             <form action="/registro" method="post">
                 <label for="name">Nombre Completo</label><br>
                 <input type="text" id="name" name="fullname" placeholder="Ingrese su nombre completo">
-                <label for="user">Usuario</label><br>
+                <label for="user">Nombre Usuario</label><br>
                 <input type="text" id="user" name="username" placeholder="Ingrese un usuario">
                 <label for="email">Correo Electronico</label><br>
                 <input type="email" id="email" name="email" placeholder="Ingrese su correo electronico">
