--- a/src/views/dashboard/dashboard.hbs
+++ b/src/views/dashboard/dashboard.hbs
@@ -21,17 +21,17 @@
                 </button>
                 <button id="menu-button">
                     <a href="">
-                        <img src="" alt="creacion">Creacion Publicacion
+                        <img src="/img/subir.png" alt="creacion">Creacion Publicacion
                     </a>
                 </button>
                 <button id="carrito-button">
                     <a href="">
-                        <img src="" alt="carrito">Amistades
+                        <img src="/img/amistades.png" alt="carrito">Amistades
                     </a>
                 </button>
                 <button id="metodos-button">
                     <a href="">
-                        <img src="" alt="metodos">Perfil
+                        <img src="/img/usuario.png" alt="metodos">Perfil
                     </a>
                 </button>
             </li>
