Modificado las vistas y eliminar

--- a/src/views/dashboard/dashboard.hbs
+++ b/src/views/dashboard/dashboard.hbs
@@ -10,8 +10,8 @@
 <body>
 
     <div id="sidebar">
+        <img src="/img/logo4.jpg" id="logoizquierdo" width="100%">
         <h1>Bienvenido</h1>
-        <h2>Samuel</h2>
         <ul>
             <li>
                 <button id="dashboard-button">
@@ -20,7 +20,7 @@
                     </a>
                 </button>
                 <button id="menu-button">
-                    <a href="">
+                    <a href="/principal">
                         <img src="/img/subir.png" alt="creacion">Creacion Publicacion
                     </a>
                 </button>
@@ -36,7 +36,6 @@
                 </button>
             </li>
         </ul>
-        <img src="/img/logo4.jpg" id="logoizquierdo">
     </div>
 
     <div id="main-content">
@@ -59,17 +58,16 @@
         </div>
         <div id="info-buttons">
             <div id="pedidos-dia">
-                <button><a href="/formulario"><img src="" alt="icon">Abrill
-                <br>55</a></button>
+                <button><a href="/formulario"><img src="" alt="icon">Abrill</a></button>
             </div>
             <div id="pedidos-anulados">
-                <button><a href="/formulario"><img src="" alt="icon">Mishell<br>55</a></button>
+                <button><a href="/formulario"><img src="" alt="icon">Mishell</a></button>
             </div>
             <div id="pedidos-entregados">
-                <button><a href="/formulario"><img src="" alt="icon">Alison<br>55</a></button>
+                <button><a href="/formulario"><img src="" alt="icon">Alison</a></button>
             </div>
             <div id="pedidos-pendientes">
-                <button><a href="/formulario"><img src="" alt="icon">Pablo<br>55</a></button>
+                <button><a href="/formulario"><img src="" alt="icon">Pablo</a></button>
             </div>
         </div>
     </div>
