--- a/src/views/dashboard/dashboard.hbs
+++ b/src/views/dashboard/dashboard.hbs
@@ -30,7 +30,7 @@
                     </a>
                 </button>
                 <button id="metodos-button">
-                    <a href="">
+                    <a href="/geolocalizacion">
                         <img src="/img/usuario.png" alt="metodos">Perfil
                     </a>
                 </button>
